2006-06-06  David Reveman  <davidr@novell.com>

	* src/event.c (handleEvent): Track XA_WM_CLASS property changes.

	* src/window.c:
	* include/compiz.h: remove updateWindowClass and update
	updateWindowClassHints.

2006-06-02  David Reveman  <davidr@novell.com>

	* configure.ac: Bump version to 0.0.12.

	* src/event.c (handleEvent): Fix typo.

	* gnome/window-decorator/gnome-window-decorator.c:
	Hide tooltips on NotifyGrab. (bnc #180692)

2006-06-01  Dan Winship  <danw@novell.com>

	* src/event.c (handleEvent): If we receive a _NET_SHOWING_DESKTOP
	request with no window set, set the flag on all screens. (Fixes
	the KDE "show desktop" applet.) Also, don't allow a client to
	change its _NET_WM_DESKTOP.

	* src/window.c (addWindow): Set _NET_WM_DESKTOP on all windows to
	0; KDE's pager and tasklist require this to be set. (bnc 178320)

2006-06-01  David Reveman  <davidr@novell.com>

	* include/compiz.h:
	* src/window.c: Add updateWindowClass.

2006-05-31  David Reveman  <davidr@novell.com>

	* include/compiz.h:
	* src/screen.c:
	* src/display.c: Add hide_skip_taskbar_windows option. (bnc 180055)

	* include/compiz.h:
	* src/window.c: Add getStartupId.

	* src/screen.c: Save initial viewport when startup notification
	is received. Fix implementation of applyStartupProperties.
	(bnc 180224)

	* src/event.c (handleEvent): Handle startup ID property changes.

	* plugins/place.c: Adjust work area to initial viewport.

	* plugins/cube.c (cubePaintTransformedScreen): Disable skydome
	animation while cube is unfolded. (bnc 179833)

	* plugins/switcher.c (switchPaintWindow): Make sure selected window is
	not clipped incorrectly when some window is transformed. (bnc 179828)

	* plugins/move.c (moveHandleEvent): Initialize xRoot and yRoot.
	(bnc 179902)

	* src/Makefile.am (INCLUDES): Add @GL_CFLAGS@. (Eric Work)

2006-05-30  Dan Winship  <danw@novell.com>

	* configure.ac: Check libwnck for wnck_window_has_name (new in
	HEAD).
